--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Montserrat:300,600&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat:300,600&display=swap');
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
