Ukończona sekcja about

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Szukasz React Developera? Sprawdź moje portfolio :)" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Andrzej Bogdoł - React Developer - Portfolio</title>
+
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat:300,600&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
