--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
     </style>
   </head>
   <body>
+    <form data-netlify="true" hidden name="contact" netlify-honeypot="bot-field">
+      <input type="email" name="email" />
+      <input type="text" name="title" />
+      <input type="textarea" name="message" />
+      <input name="bot-field" type="hidden" />
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
