zmiany w Formiku i Netlify

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <form data-netlify="true" hidden name="contact" netlify-honeypot="bot-field">
       <input type="email" name="email" />
       <input type="text" name="title" />
-      <input type="textarea" name="message" />
+      <textarea name="message"></textarea>
       <input name="bot-field" type="hidden" />
     </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
